# Equilibrium

./: Equilibrium.sublime-workspace  I18N_IMPLEMENTATION.md  LICENSE  README.md  index.py  requirements.txt  utils.py
backend/: Dockerfile  api.py  pyproject.toml
backend/equilibrium/: api.py  utils.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/components/: AdSidebar.tsx  EquationInput.tsx  LanguageSelector.tsx  ResultCard.tsx  StepByStep.tsx
frontend/src/components/chemical-equation-balancer/: BalancedResultDisplay.tsx  ChemicalEquationBalancer.tsx  EquationInputForm.tsx  FormattedInputDisplay.tsx
frontend/src/components/donate/: DonateModal.tsx
frontend/src/components/help/: HelpModal.tsx
frontend/src/components/ui/: accordion.tsx  dialog.tsx  sonner.tsx
frontend/src/locales/en/: translation.json
frontend/src/locales/es/: translation.json
frontend/src/locales/pt/: translation.json
frontend/src/locales/zh/: translation.json
frontend/srcs/components/chemical-equation-balancer/: ChemicalEquationBalancer.tsx  EquationInputForm.tsx  FormattedInputDisplay.tsx  utils.ts
static/css/: app.css
static/js/: script.js
templates/: base.html  index.html
